<resources>
    <string name="app_name">Crescere!</string>
    <string name="action_about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_add_new_control">AddNewControlActivity</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_history_control">HistoryControlActivity</string>

    <!--main-->
    <string name="title_list_last_visit">Last control</string>
    <string name="title_list_date">Date:</string>
    <string name="title_list_length">Length (cm):</string>
    <string name="title_list_weight">Weight (kg):</string>
    <string name="title_list_note">Notes:</string>
    <string name="button_profile_text">Profile</string>
    <string name="button_process_text">Progress</string>
    <string name="button_new_control_text">New Control</string>
    <string name="button_control_history_text">Controls</string>

    <!--NewControl-->
    <string name="title_new_control">New Control</string>
    <string name="title_head_circumference">Head circum (cm):</string>
    <string name="title_teeth">Teeth:</string>
    <string name="title_pediatric">Pediatrician:</string>
    <string name="title_mood">Mood:</string>
    <string name="mood_happy">Happy</string>
    <string name="mood_crybaby">Crybaby</string>
    <string name="mood_angry">Angry</string>
    <string name="mood_indifferent">Indifferent</string>
    <string name="button_save">Save</string>

    <string-array name="count_teeth">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
    </string-array>
    <string name="cm">(cm)</string>
    <string name="kg">(kg)</string>
    <string name="message_new_control_added">New control added</string>
    <string name="error_message_empty_fields">Please, complete the empty fields</string>

    <!--ControlHistory-->
    <string name="title_control_list">Control List</string>
    <string name="message_delete_control">Deleted!</string>
    <string name="message_cancel_delete">Canceled!</string>

    <!-- Profile -->
    <string name="title_profile">Baby Profile</string>
    <string name="baby_name">Full name:</string>
    <string name="baby_id">ID:</string>
    <string name="gender_fem">Girl</string>
    <string name="gender_male">Boy</string>
    <string name="birthday_date">Birthday Date:</string>
    <string name="blood_type">Blood Type:</string>
    <string name="gender">Gender:</string>
    <string name="message_add_patient">Baby added</string>
    <string name="message_edit_patient">Baby updated</string>
    
    <!-- Testing -->
    <string name="title_activity_graph_test">graphTest</string>
    <string name="title_activity_chart">ChartActivity</string>

       <!-- Chart -->
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Graph -->
    <string name="title_progress">Baby Progress</string>
    <string name="wight_progress">Weight Progress</string>
    <string name="length_progress">Length Progress</string>
    <string name="title_activity_about">AboutActivity</string>

    <!-- About -->
    <string name="title_about">About</string>
    <string name="design_collaboration">Design collaborators:</string>
    <string name="collaborators">Lucia and Ariel</string>
    <string name="made_icons">Icon made by Freepik from www.flaticon.com </string>
    <string name="developed_by">Developed by:</string>
    <string name="developers">Paula García and Sabrina Sproviero</string>
    <string name="copyright">© Copyright 2015 Crescere!</string>
    <string name="copyright_add">All rights reserved</string>

</resources>
