<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper">

    <TextView
        android:id="@+id/title_new_control"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/title_new_control"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/title_date"
        android:text="@string/title_list_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_below="@id/title_new_control"/>

    <LinearLayout
        android:id="@+id/linear_first_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/title_date">

        <LinearLayout
            android:id="@+id/linear_content1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/linear_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_list_size"
                    android:textStyle="bold"
                    android:layout_weight="0.5"/>

                <EditText
                    android:id="@+id/add_size"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_weight="0.5"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_teeth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_teeth"
                    android:textStyle="bold"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spinner_teeth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:spinnerMode="dropdown" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_content2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <LinearLayout
                android:id="@+id/linear_weight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_list_weight"
                    android:textStyle="bold"
                    android:layout_weight="0.5"/>

                <EditText
                    android:id="@+id/add_weight"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_weight="0.5"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_head_circum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_head_circumference"
                    android:textStyle="bold"
                    android:layout_weight="0.5"/>

                <EditText
                    android:id="@+id/add_head_circum"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:layout_weight="2.69"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_mood"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linear_first_data"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood_happy"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood_crybaby"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood_indifferent"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mood_angry"/>
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        android:layout_alignParentBottom="true"/>

    <EditText
        android:id="@+id/add_note"
        android:text="@string/title_list_note"
        android:layout_width="match_parent"
        android:gravity="top"
        android:layout_height="match_parent"
        android:layout_below="@id/linear_mood"
        android:layout_above="@id/button_save"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_above="@id/linear_first_data"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
