<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:layout_margin="10dp"
    android:padding="10dp"
    android:background="@drawable/custom_border">

    <TextView
        android:id="@+id/last_visit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="40sp"
        android:textStyle="bold"
        android:text="@string/title_list_last_visit"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:id="@+id/linear_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/last_visit">

        <TextView
            android:id="@+id/list_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title_list_date"
            android:paddingRight="31dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/last_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="03/02/2015"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_date">

        <TextView
            android:id="@+id/list_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title_list_size"
            android:layout_marginBottom="10dp"
            android:paddingRight="33dp"/>

        <TextView
            android:id="@+id/last_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="64 cm"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_weight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/linear_size">

        <TextView
            android:id="@+id/list_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title_list_weight"
            android:paddingRight="11dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/last_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="3.300 kg"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/icon_border"
        android:layout_alignParentRight="true">

        <ImageView
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:id="@+id/iconBaby"
            android:background="@drawable/baby63"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_conteiner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/button_border"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:id="@+id/buttons_bar_bottom1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/button_profile"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="12sp"
                android:text="@string/button_profile_text"
                android:layout_marginRight="20dp"
                android:onClick="goToViewProfile"/>

            <Button
                android:id="@+id/button_add_new_control"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="12sp"
                android:text="@string/button_new_control_text"
                android:onClick="goToViewNewControl"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttons_bar_bottom2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_progress"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="12sp"
                android:text="@string/button_process_text"
                android:layout_marginRight="20dp"
                android:onClick="goToViewProgress"/>

            <Button
                android:id="@+id/button_control_history"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:textSize="12sp"
                android:text="@string/button_control_history_text"
                android:onClick="goToViewControlsHistory"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_note"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/linear_weight"
        android:layout_above="@id/button_conteiner">

        <TextView
            android:id="@+id/list_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/title_list_note"
            android:paddingRight="19dp"
            android:layout_marginBottom="10dp"/>

        <TextView
            android:id="@+id/last_note"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="15sp"
            android:layout_marginLeft="12dp"
            android:text="Muchas cosas interesantes sobre la consulta, digamos que estamos probando como anda estooooo!!!" />
    </LinearLayout>
</RelativeLayout>
