<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="50dp"
    android:padding="30dp">


            <TextView
                android:id="@+id/last_visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="12dp"
                android:textStyle="bold"
                android:text="@string/title_list_last_visit"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/list_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textStyle="bold"
                android:text="@string/title_list_date"
                android:layout_below="@id/last_visit"
                android:paddingRight="11dp"/>

            <TextView
                android:id="@+id/last_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text="3/2/2015"
                android:layout_below="@id/last_visit"
                android:layout_toRightOf="@id/list_date"/>

            <TextView
                android:id="@+id/list_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textStyle="bold"
                android:text="@string/title_list_length"
                android:layout_below="@id/list_date"
                android:paddingRight="11dp"/>

            <TextView
                android:id="@+id/last_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text="64 cm"
                android:layout_below="@id/list_date"
                android:layout_toRightOf="@id/list_size"/>

            <TextView
                android:id="@+id/list_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textStyle="bold"
                android:text="@string/title_list_weight"
                android:layout_below="@id/list_size"
                android:paddingRight="11dp"/>

            <TextView
                android:id="@+id/last_weight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text="3.300 kg"
                android:layout_below="@id/list_size"
                android:layout_toRightOf="@id/list_weight"/>

            <TextView
                android:id="@+id/list_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:textStyle="bold"
                android:text="@string/title_list_note"
                android:layout_below="@id/list_weight"
                android:paddingRight="11dp"/>

            <TextView
                android:id="@+id/last_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                android:text="Muchas cosas interesantes sobre la consulta, digamos que estamos probando como anda estooooo!!!"
                android:layout_below="@id/list_weight"
                android:layout_toRightOf="@id/list_note"
                android:layout_alignRight="@+id/iconBaby"
                android:layout_alignEnd="@+id/iconBaby" />

            <ImageView
                android:layout_width="60px"
                android:layout_height="60px"
                android:id="@+id/iconBaby"
                android:background="@drawable/baby63"
                android:layout_alignParentRight="true"/>

</RelativeLayout>
